added media queries xs,sm,md

--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,9 @@ p {
   font-weight: bold;
 }
 
-#showcase h1 {
-  font-size: 50px;
-  margin-bottom: 20px;
+h1 {
+  font-size: 30px;
+  margin-bottom: 5px;
 }
 
 #showcase img {
@@ -86,8 +86,44 @@ p {
   color: black;
 }
 
+/* Media Queries */
+/*xs*/
 @media (max-width: 575px) {
+  .navbar-brand {
+    font-size: 25px;
+    color: black !important;
+    font-weight: bold;
+  }
+  h2 {
+    font-size: 28px;
+  }
+
+  .card {
+    margin: 0px 20px 20px 20px;
+  }
+
   .skill-item {
     margin: 0px 50px 0px 50px;
+  }
+}
+
+/* sm */
+@media (min-width: 576px) and (max-width: 767px) {
+  #showcase img {
+    padding: 0px;
+    width: 80%;
+    height: 80%;
+  }
+  .card {
+    margin: 0px 20px 20px 20px;
+  }
+}
+
+/* md */
+@media (min-width: 768px) and (max-width: 991px) {
+  #showcase img {
+    padding: 10px;
+    width: 80%;
+    height: 80%;
   }
 }
