--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ h1 {
     font-size: 28px;
   }
   #testimonial p,
-  h5 {
+  #showcase h5 {
     font-size: 15px;
   }
   #showcase img {
@@ -169,7 +169,7 @@ h1 {
     font-size: 20px;
   }
   #testimonial p,
-  h5 {
+  #showcase h5 {
     font-size: 15px;
   }
   .card {
