--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,13 @@ h1 {
   color: black;
 }
 
+.back-to-top {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  display: none;
+}
+
 /* Media Queries */
 /*xs*/
 @media (max-width: 575px) {
